@@ -9,11 +9,12 @@ import io.confluent.kafka.schemaregistry.client.rest.entities.Metadata;
 import io.confluent.kafka.schemaregistry.rest.SchemaRegistryConfig;
 import io.confluent.kafka.schemaregistry.storage.KafkaSchemaRegistry;
 import io.confluent.kafka.schemaregistry.storage.serialization.SchemaRegistrySerializer;
-
-import java.util.*;
-
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Properties;
 import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import static org.junit.Assert.*;
 
@@ -35,10 +36,8 @@ public class LocalSchemaRegistryClientTest extends ClusterTestHarness {
         schemaRegistry.init();
 
         client = new LocalSchemaRegistryClient(schemaRegistry);
-        Map<String, String> map = new HashMap<>();
-        map.put("key1", "value1");
-        Metadata metadata = new Metadata(null, map, null);
-        client.register("subject1", new AvroSchema("{\"type\":\"record\",\"name\":\"myrecord1\", \"fields\":[{\"type\":\"string\",\"name\":\"f1\"}]}", Collections.emptyList(),  new HashMap<String, String>(), metadata, null, 2, true));
+        Metadata metadata = new Metadata(null, Map.of("key1", "value1"), null);
+        client.register("subject1", new AvroSchema("{\"type\":\"record\",\"name\":\"myrecord1\", \"fields\":[{\"type\":\"string\",\"name\":\"f1\"}]}", List.of(),  new HashMap<String, String>(), metadata, null, 2, true));
         client.register("subject2", new AvroSchema("{\"type\":\"record\",\"name\":\"myrecord2\",\"fields\":[{\"type\":\"string\",\"name\":\"f1\"}]}"));
     }
 
